# package_manager

./: CMakeLists.txt  README.md  package.xml
config/: packages.yaml
include/package_manager/: main_window.hpp  qnode.hpp
launch/: package_manager.launch.py
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: mainwindow.ui
